2002-01-24  Johannes Zellner  <johannes@zellner.org>

	* src/gplt_x11.c term/x11.trm:
	implemented rotated text for the x11 driver

2002-01-23  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/gnuplot.doc: Fixed all-spaces line and spurious <TAB>
 	character.

2002-01-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.cyg: Improvements, easily editable options.

	* src/win/wgnuplib.h: _fstr* functions are declared in Cygwin.

2002-01-23  Johannes Zellner  <johannes@zellner.org>

	* term/x11.trm: Split the driver path into words so that something
	like
	    set term x11 driver "strace -f -o strace.out ./gnuplot_x11"
	can be used (nice for debugging for example).

2002-01-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/history.c: Fix for "history !first_command_in_history".

	* src/command.c: Fix for "history !load".

2001-01-22  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graphics.c (boundary): Moved calls to set the axis endpoints
 	up here.  Fixes bug in key placement caused by uninitialized
 	variables used by map_position().
	(do_plot): Removed them from here.
	(boundary): Disallow key entry height to become zero --- want to
 	divide by it later.

2002-01-22  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* INSTALL: Remove references to the GP_PATH_* macros.

	* configure.in: General cleanup and bugfixing. Replace all references
	to GP_PATH_* macros with code that uses generic autoconf macros.

	* src/graphics.c: Make finish_filled_curve() static.

	* src/version.c: Increment version to 3.8i, update date and copyright.

	* m4/path-hdr.m4, m4/path-lib.m4: Remove.

2002-01-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/gadgets.h src/gadgets.c src/graph3d.c
	src/graphics.c src/save.c src/set.c src/show.c src/tables.h
	src/tables.c src/unset.c: New option 'set key height <height>'.

2002-01-18  Clark Gaylord  <cgaylord@vt.edu>

	* Change all references in documentation from gnuplot.org to