@@ -1,5 +1,13 @@
 2002-01-24  Johannes Zellner  <johannes@zellner.org>
 
+	* src/readline.c term/x11.trm: implemented the non-buffered
+	stdin for the X11 driver (and ONLY for the X11 driver) to solve
+	problems with
+	   1) escape sequences (like the "up" arrow)
+	   2) pasting commands with the mouse
+
+2002-01-24  Johannes Zellner  <johannes@zellner.org>
+
 	* src/gplt_x11.c term/x11.trm:
 	implemented rotated text for the x11 driver
 
